--- a/app/src/main/res/layout/item_package.xml
+++ b/app/src/main/res/layout/item_package.xml
@@ -8,7 +8,8 @@
     <ImageView
         android:id="@+id/iv_icon"
         android:layout_width="36dp"
-        android:layout_height="36dp" />
+        android:layout_height="36dp"
+        android:contentDescription="@string/app_name" />
 
     <LinearLayout
         android:layout_width="match_parent"
